BuildHughes/translation-tool/inputs/source_meta/objects/Service_Provider_Respone_Time__c.object
<CustomObject>
    <description>Service Provider Respone Time</description>
    <fields>
        <fullName>Location_City__c</fullName>
        <description>Location City</description>
        <label>Location City</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_State_Province__c</fullName>
        <description>Location State/Province</description>
        <label>Location State/Province</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Zip_Postal_Code__c</fullName>
        <description>Location Zip/Postal Code</description>
        <label>Location Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <description>Mileage</description>
        <label>Mileage</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_premise_Staging_DB_ID__c</fullName>
        <description>On-premise Staging DB ID</description>
        <externalId>true</externalId>
        <label>On-premise Staging DB ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <description>Response Time</description>
        <label>Response Time</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Svc_Prov_City__c</fullName>
        <description>Svc Prov City</description>
        <label>Svc Prov City</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Svc_Prov_State_Province__c</fullName>
        <description>Svc Prov State/Province</description>
        <label>Svc Prov State/Province</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Svc_Prov_Zip_Postal_Code__c</fullName>
        <description>Svc Prov Zip/Postal Code</description>
        <label>Svc Prov Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Service Provider Respone Time</label>
    <nameField>
        <displayFormat>SVCRES-{0000000000}</displayFormat>
        <label>Service Provider Respone Time Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Provider Respone Times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>